Do not save tel number
