# packages/admin-bot/src/routes/dev/route.ts
@@ -20,7 +20,6 @@ export function setupDevRoute() {
       parentName: null,
       passwordHash: '',
       role: UserRole.ADMIN,
-      telnum: null,
     });
     await repo.users().insert({
       firstName: 'First name',
@@ -32,7 +31,6 @@ export function setupDevRoute() {
       parentName: null,
       passwordHash: '',
       role: UserRole.STUDENT_NON_APPROVED,
-      telnum: null,
     });
 
     return new Response();
